--- a/web/css/general.css
+++ b/web/css/general.css
@@ -82,6 +82,8 @@ width                  :180px;
     text-align:         left;
     padding-left:       133px;
     font-weight:        bold;
+    font-size: 12px;
+    font-family: Georgia;
 }
 
 a{
@@ -357,7 +359,7 @@ margin-bottom          :5px;
 }
 
 .menu{
-    padding-top: 15px;
+    padding-top: 12px;
     width: 1100px;
 }
 
