--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -56,7 +56,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Auditoria Estado Fondo</a></li>
+          <li><a href="{{ path('reporte_auditoriaestadofondo') }}">Auditoria Estado Fondo</a></li>
           <li><a href="#">Auditoria Rendición</a></li>
         </ul>
       </li>
