--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Periodorendicion/index.html.twig
@@ -60,6 +60,7 @@
                             <a href="{{ path('corresponsalia_rendirgasto', {'idperiodo':entity.id}) }}"><b class="text-warning">RENDIR</b></a>
                             {% else %}
                             <b>BLOQUEADO</b>
+
                             {% endif %}
                                 
                         {% endif %}
@@ -70,7 +71,8 @@
                                 <a href="{{ path('periodorendicion_edit', { 'id': entity.id }) }}"><b class="glyphicon glyphicon-edit"></b></a> |  
                                 <a href="{{ path('estadofondo_new', {'idperiodo':entity.id}) }}"><b class="text-warning">FONDOS</b></a>
                                 {% else %}
-                                <b>CULMINADO</b>
+                                <b>CULMINADO</b> | 
+                                <a href="{{ path('reporte_excelrendicion',{'idperiodo':entity.id}) }}"><img width="25px;" src="{{ asset('images/excel.png') }}"></a>
                             {% endif %}
                         {% endif %}
 
@@ -81,11 +83,12 @@
         </tbody>
     </table>
 
+    <br><br><br>
+    {% if is_granted('ROLE_RENDICION_ADMIN') %}
+    <a class="btn btn-primary" href="{{ path('periodorendicion_new') }}">NUEVO PERÍODO</a> | 
     <br><br>
-
-    <a class="btn btn-primary" href="{{ path('periodorendicion_new') }}">NUEVO PERÍODO</a>
-
-    <br><br>
+    {% endif %}
+    
 
     <script>
     $(document).ready(function(){
