--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
         
-        
+      {% if is_granted('ROLE_RENDICION_ADMIN') %}  
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">USUARIOS<b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -29,6 +29,7 @@
           <li><a href="{{ path('usercorresponsalia_new') }}">Nueva relación usuario-Corresponsalía</a></li>
         </ul>
       </li>
+      {% endif %}
       
       {% if is_granted('ROLE_RENDICION_ADMIN') %}
       <li class="dropdown">
@@ -53,13 +54,13 @@
       </li>
       {% endif %}
       
-      <li class="dropdown">
+      {#<li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="{{ path('reporte_auditoriaestadofondo') }}">Auditoria Estado Fondo</a></li>
           <li><a href="#">Auditoria Rendición</a></li>
         </ul>
-      </li>
+      </li>#}
       
       {#
       <li class="dropdown">
