--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -15,7 +15,7 @@
   <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
     <ul class="nav navbar-nav">
         
-      {% if is_granted('ROLE_RENDICION_ADMIN') %}  
+      {% if is_granted('ROLE_SUPERADMIN') %}  
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">USUARIOS<b class="caret"></b></a>
         <ul class="dropdown-menu">
