cambios en modulo de personal

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -52,13 +52,38 @@
         </ul>
       </li>
       {% endif %}
+
+      {% if is_granted('ROLE_PERSONAL') %}
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">PERSONAL <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="{{ path('personal') }}">Personal</a></li>
+          <li><a href="{{ path('cargo') }}">Cargos</a></li>
+        </ul>
+      </li>
+      {% endif %}
+
+      {% if is_granted('ROLE_CONSULTORIA') %}
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONSULTORIA <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="{{ path('consultoria') }}">Datos Legales por Corresponsalía</a></li>
+          <li><a href="{{ path('representante') }}">Representantes</a></li>
+          <li><a href="{{ path('representante') }}">Contratos del Personal</a></li>
+        </ul>
+      </li>
+      {% endif %}
+      
       
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="{{ path('reporte_auditoriaestadofondo') }}">Auditoria Estado Fondo</a></li>
           <li><a href="#">Auditoria Rendición</a></li>
-        </ul>
+          {% if is_granted('ROLE_CONSULTORIA') %}
+            <li><a href="{{ path('reporteconsultoria') }}">Personal en Corresponsalías</a></li>
+          {% endif %}
+        </ul>        
       </li>
       
       {#
