--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/revisionrendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/revisionrendicion.html.twig
@@ -62,7 +62,7 @@
             <form name="formdevolucion" novalidate method="post" action="{{ path('corresponsalia_estatusrendicion',{'idperiodo':periodo.id,'estatus':3 }) }}" onsubmit="return confirm('¿Está seguro que desea devolver esta rendición para su corrección? Recuerde actualizar las rediciones que se deben corregir antes de devolver la rendición!!');">  
                
                <textarea name="justificadev" placeholder="Describa el error" id="justificadev"></textarea><br>
-               <input type="button" onclick="devolver()" value="DEVOLVER PARA CORRECIÓN" class="btn btn-danger">
+               <input type="button" onclick="devolver()" value="DEVOLVER PARA CORRECCIÓN" class="btn btn-danger">
 
             </form> 
         {% endif %}
@@ -71,7 +71,7 @@
             </div>
             <div>
                 <form novalidate method="post" action="{{ path('corresponsalia_estatusrendicion',{'idperiodo':periodo.id,'estatus':4 }) }}" onsubmit="return confirm('¿Está seguro que desea cerrar esta rendición? Recuerde que no se podrá realizar ningun cambio y todos las rendiciones que no están aprobadas se aprobarán!!')">  
-                   <input type="submit" value="CERRAR CRENDICIÓN" class="btn btn-success">
+                   <input type="submit" value="CERRAR RENDICIÓN" class="btn btn-success">
                 </form> 
             </div>
             </div>
