estado fondo usuarios y triggers

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/new.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Estadofondo/new.html.twig
@@ -57,7 +57,7 @@
             </div>
             <div class="contenedorform">
                 <div class="labelform">Saldo inicial:</div>
-                <div class="widgetform">{{ form_widget(form.saldoinicial) }}</div>
+                <div class="widgetform">{{ form_widget(form.saldoinicial,{'attr':{'value':saldoinicial,'readonly':'readonly'}}) }}</div>
             </div>
             <div class="contenedorform">
                 <div class="labelform">Recurso enviado:</div>
