--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -53,6 +53,39 @@
         </ul>
       </li>
       {% endif %}
+
+      {% if is_granted('ROLE_PERSONAL') %}
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">PERSONAL <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="{{ path('personal') }}">Personal</a></li>
+          <li><a href="{{ path('cargo') }}">Cargos</a></li>
+        </ul>
+      </li>
+      {% endif %}
+
+      {% if is_granted('ROLE_CONSULTORIA') %}
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">CONSULTORIA <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="{{ path('datoslegales') }}">Datos Legales por Corresponsalía</a></li>
+          <li><a href="{{ path('representante') }}">Representantes</a></li>
+          <li><a href="{{ path('contrato') }}">Contratos del Personal</a></li>
+        </ul>
+      </li>
+      {% endif %}
+      
+      
+      <li class="dropdown">
+        <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
+        <ul class="dropdown-menu">
+          <li><a href="#">Auditoria Estado Fondo</a></li>
+          <li><a href="#">Auditoria Rendición</a></li>
+          {% if is_granted('ROLE_CONSULTORIA') %}
+            <li><a href="#">Personal en Corresponsalías</a></li>
+          {% endif %}
+        </ul>        
+      </li>
       
       {#<li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
