--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/rendirgasto.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/rendirgasto.html.twig
@@ -73,6 +73,14 @@
          });
     </script>
     
+  <script>
+  $(function() {
+    $( "#rendicion_relaciongasto_fechafactura" ).datepicker({
+      changeMonth: true,
+      changeYear: true,
+    });
+  });
+  </script>
 {% endblock %}
 
 
