--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/editarendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/editarendicion.html.twig
@@ -71,4 +71,13 @@
          });
     </script>
     
+    <script>
+      $(function() {
+        $( "#rendicion_relaciongasto_fechafactura" ).datepicker({
+          changeMonth: true,
+          changeYear: true,
+        });
+      });
+    </script>
+
 {% endblock %}
