--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -80,7 +80,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Auditoria Estado Fondo</a></li>
+          <li><a href="{{ path('corresponsalia_reporteauestadofondo') }}">Auditoria Estado Fondo</a></li>
           <li><a href="#">Auditoria Rendición</a></li>
           {% if is_granted('ROLE_CONSULTORIA') %}
             <li><a href="#">Personal en Corresponsalías</a></li>
