--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/_listadorendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/_listadorendicion.html.twig
@@ -12,7 +12,7 @@
                     <thead>
                         <tr>
                             <th>Id</th>
-                            <th>Nro Comp.</th>
+                            <th>Nro</th>
                             <th>F. Factura</th>
                             <th>Descripcion</th>
                             <th>Nombre/Razón</th>
