--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/rendirgasto.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/rendirgasto.html.twig
@@ -78,6 +78,7 @@
     $( "#rendicion_relaciongasto_fechafactura" ).datepicker({
       changeMonth: true,
       changeYear: true,
+      altFormat: "dd-mm-yyyy",
     });
   });
   </script>
