--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Default/_tablarendicion.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Default/_tablarendicion.html.twig
@@ -6,7 +6,7 @@
             <th>Nro. Comprobante</th>
             <td>{{ form_widget(form.numerocomprobante) }}</td>
             <th>Fecha Factura</th>
-            <td>{{ form_widget(form.fechafactura, {'attr':{'readonly':'readonly'}}) }}</td>
+            <td>{{ form_widget(form.fechafactura) }}</td>
         </tr>
         <tr>
             <th>Cambio</th>
