--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -35,6 +35,7 @@
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">ADMINISTRAR <b class="caret"></b></a>
         <ul class="dropdown-menu">
+          <li><a href="{{ path('descripciongasto') }}">Descripción de gastos</a></li>
           <li><a href="{{ path('tipomoneda') }}">Tipo de Moneda</a></li>
           <li><a href="{{ path('tipocorresponsalia') }}">Tipo de Corresponsalía</a></li>
           <li><a href="{{ path('corresponsalia') }}">Corresponsalia</a></li>
