--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -54,13 +54,14 @@
       </li>
       {% endif %}
       
-      {% if is_granted('ROLE_TECNOLOGIA') %}
+      {% if is_granted('ROLE_TECNO') %}
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">TECNOLOGIA <b class="caret"></b></a>
         <ul class="dropdown-menu">
           <li><a href="{{ path('tecnocategoria') }}">Categoria</a></li>
-          <li><a href="{{ path('tecnomarca') }}">Marca</a></li>
           <li><a href="{{ path('tecnoequipo') }}">Equipo</a></li>
+          <li><a href="{{ path('tecnomarca') }}">Marca</a></li>
+          <li><a href="{{ path('tecnomodelo') }}">Modelo</a></li>
         </ul>
       </li>
       {% endif %}
