--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/index.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Tecnologia/Modelo/index.html.twig
@@ -1,6 +1,6 @@
 {% extends '::base.html.twig' %}
 
-{% block titulomodulo %}<h1>LISTADO DE EQUIPO</h1>{% endblock %}
+{% block titulomodulo %}<h1>LISTADO DE MODELO</h1>{% endblock %}
 
 {% block body -%}
     {{ parent() }}
