--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Includes/menu.html.twig
@@ -54,7 +54,7 @@
       </li>
       {% endif %}
       
-      {% if is_granted('ROLE_TECNO') %}
+      {% if is_granted('ROLE_TECNO_ADMIN') or is_granted('ROLE_TECNO_CORRESPONSALIA') %}
       <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">TECNOLOGIA <b class="caret"></b></a>
         <ul class="dropdown-menu">
@@ -65,7 +65,6 @@
         </ul>
       </li>
       {% endif %}
-      
       {#<li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">REPORTES <b class="caret"></b></a>
         <ul class="dropdown-menu">
