formulario de estado fondo

--- a/src/Frontend/CorresponsaliaBundle/Resources/views/Reporte/auditoriaestadofondo.html.twig
+++ b/src/Frontend/CorresponsaliaBundle/Resources/views/Reporte/auditoriaestadofondo.html.twig
@@ -13,6 +13,7 @@
 {% block body -%}
     {{ parent() }}
     
+    {#
     {% if form_errors(form.aniodesde) or form_errors(form.aniohasta) or form_errors(form.mesdesde) or form_errors(form.meshasta)  %}
     <div class="alert alert-danger errores" style="width:70%;">
         <div><b>Alerta! Ha ocurrido un error en el formulario:</b><br><br></div>
@@ -23,65 +24,58 @@
         {% for e in error %}<div><ul><li>{{ e }}</li></ul></div>{% endfor %}
     </div>
     {% endif %}
-    
+    #}
+
     <form novalidate method="post" action="{{ path('corresponsalia_creareporteauestadofondo') }}">
         {{ form_widget(form._token) }}
         <div class="formShow" style="width:70%;">
             <div class="contenedorform">
                 <div class="labelform">Corresponsalía:</div>
-                <div class="widgetform">{{ form_widget(form.corresponsalia) }}</div>
-            </div>
-            <div class="contenedorform">
-                <div class="labelform">Tipo gasto:</div>
-                <div class="widgetform">{{ form_widget(form.tipogasto) }}</div>
-            </div>
-            <div class="contenedorform">
-                <div class="labelform">Descripción gasto:</div>
-                <div class="widgetform">{{ form_widget(form.descripciongasto) }}</div>
-            </div>
-            <div class="contenedorform">
-                <div class="labelform" style="width:210px;">Año:</div>
-                <div class="widgetform">Desde: {{ form_widget(form.aniodesde,{'attr':{'style':'width:100px'}}) }} | Hasta: {{ form_widget(form.aniohasta,{'attr':{'style':'width:100px'}}) }}</div>
-            </div>
-            <div class="contenedorform">
-                <div class="labelform" style="width:210px;">Mes:</div>
-                <div class="widgetform">Desde: {{ form_widget(form.mesdesde,{'attr':{'style':'width:100px'}}) }} | Hasta: {{ form_widget(form.meshasta,{'attr':{'style':'width:100px'}}) }}</div>
+                <div class="widgetform">{{ form_widget(form.corresponsalia,{'attr':{'style':'width:250px'}}) }}</div>
             </div>
 
-            {#
-            <div class="contenedorform">
-                <div class="labelform">Corresponsalía:</div>
-                <div class="widgetform">{{ form_widget(form.corresponsalia) }}</div>
+            <div id="ajax">
+                {#
+                <div class="contenedorform">
+                    <div class="labelform">Tipo gasto:</div>
+                    <div class="widgetform">{{ form_widget(form.tipogasto) }}</div>
+                </div>
+                <div class="contenedorform">
+                    <div class="labelform">Descripción gasto:</div>
+                    <div class="widgetform">{{ form_widget(form.descripciongasto) }}</div>
+                </div>
+                <div class="contenedorform">
+                    <div class="labelform" style="width:210px;">Año:</div>
+                    <div class="widgetform">Desde: {{ form_widget(form.aniodesde,{'attr':{'style':'width:100px'}}) }} | Hasta: {{ form_widget(form.aniohasta,{'attr':{'style':'width:100px'}}) }}</div>
+                </div>
+                <div class="contenedorform">
+                    <div class="labelform" style="width:210px;">Mes:</div>
+                    <div class="widgetform">Desde: {{ form_widget(form.mesdesde,{'attr':{'style':'width:100px'}}) }} | Hasta: {{ form_widget(form.meshasta,{'attr':{'style':'width:100px'}}) }}</div>
+                </div>
+                <div class="contenedorform">
+                    <div class="labelform">Cobertura:</div>
+                    <div class="widgetform">{{ form_widget(form.cobertura) }}</div>
+                </div>
+                #}
             </div>
-            <div class="contenedorform">
-                <div class="labelform">Tipo gasto:</div>
-                <div class="widgetform">{{ form_widget(form.tipogasto) }}</div>
-            </div>
-            <div class="contenedorform" style="display: none;" id="cobertura">
-                <div class="labelform">Cobertura:</div>
-                <div class="widgetform">{{ form_widget(form.cobertura) }}</div>
-            </div>
-            #}
         </div>
 
-        <input type="submit" value="CREAR" class="btn btn-primary"> | 
-        <a class="btn btn-default" href="{{ path('periodorendicion') }}">IR AL LISTADO</a>
+        <div id="boton"><a class="btn btn-default" href="{{ path('periodorendicion') }}">IR AL LISTADO</a></div>
+
     </form>
+    <br><br><br>
     
     <script type="text/javascript">
         $(document).ready(function () {
-            
-            $('#reporte_tipogasto').focusout(function(){
-                var dato=$("#reporte_tipogasto").val()
-                if(dato[0]==2)
-                    $("#cobertura").show()
-                else
-                    $("#cobertura").hide()
+
+            $('#reporte_corresponsalia').click(function(){
+                var dato = $("#reporte_corresponsalia").val();
+                var ruta = "{{ path('ajaxreporteauditoriaestadofondo', {'dato': 'variable','muestra': '2'}) }}";
+                ruta = ruta.replace("variable", dato);
+                $('#ajax').load(ruta);
             });
-            
-            var dato=$("#reporte_tipogasto").val()
-            if(dato[0]==2)
-                    $("#cobertura").show()
+
         });
-     </script>
+    </script>
+    
 {% endblock %}
